# akasa

./: .gitignore  Cargo.toml  LICENSE  Makefile  README-CN.md  README.md
.github/workflows/: rust.yml
akasa/: Cargo.toml
akasa-core/: Cargo.toml  build.rs
akasa-core/proto/: akasa.proto
akasa-core/src/: config.rs  hook.rs  lib.rs  state.rs  storage.rs
akasa-core/src/auth/: jwt.rs  mod.rs  user.rs
akasa-core/src/cluster/: client.rs  convert.rs  mod.rs  network.rs  store.rs
akasa-core/src/protocols/: mod.rs
akasa-core/src/protocols/http/: health.rs  mod.rs  prometheus.rs
akasa-core/src/protocols/mqtt/: auth.rs  common.rs  mod.rs  online_loop.rs  pending.rs  retain.rs  route.rs
akasa-core/src/protocols/mqtt/v3/: message.rs  mod.rs  session.rs
akasa-core/src/protocols/mqtt/v3/packet/: common.rs  connect.rs  mod.rs  publish.rs  subscribe.rs
akasa-core/src/protocols/mqtt/v5/: message.rs  mod.rs  session.rs
akasa-core/src/protocols/mqtt/v5/packet/: common.rs  connect.rs  mod.rs  publish.rs  subscribe.rs
akasa-core/src/protocols/scram/: client.rs  error.rs  mod.rs  server.rs
akasa-core/src/server/: http_api.rs  io_compat.rs  mod.rs  proxy.rs  rt.rs  rt_glommio.rs  rt_tokio.rs  tls.rs
akasa-core/src/tests/: mod.rs  utils.rs
akasa-core/src/tests/auth/: jwt.rs  mod.rs
akasa-core/src/tests/protocols/: mod.rs
akasa-core/src/tests/protocols/http/: health.rs  mod.rs  prometheus.rs
akasa-core/src/tests/protocols/mqtt/v3/: connect.rs  mod.rs  pending.rs  publish.rs  retain.rs  session.rs  subscribe.rs  will.rs
akasa-core/src/tests/protocols/mqtt/v5/: mod.rs
akasa-core/src/tests/protocols/mqtt/v5/base/: connect.rs  mod.rs  pending.rs  publish.rs  retain.rs  session.rs  subscribe.rs  will.rs
akasa-core/src/tests/protocols/mqtt/v5/v500/: auth.rs  connect.rs  publish.rs  shared_subscription.rs  subscribe.rs
akasa/src/: default_hook.rs  main.rs
docker-files/: .gitignore  Dockerfile  README.md
docs/chinese/: config.md  getting-started.md
docs/english/: config.md  getting-started.md  use-jwt.md
src/: broker.rs  config.rs  hook.rs  logger.rs  main.rs  route.rs  state.rs  storage.rs
src/broker/: rt_glommio.rs  rt_tokio.rs
src/protocols/: mqtt.rs
src/protocols/mqtt/: common.rs  message.rs  mod.rs  online_loop.rs  pending.rs  retain.rs  route.rs  session.rs
src/protocols/mqtt/v3/: message.rs  mod.rs  pending.rs  session.rs
src/protocols/mqtt/v3/packet/: common.rs  connect.rs  mod.rs  pingreq.rs  publish.rs  subscribe.rs
src/protocols/mqtt/v5/: message.rs  mod.rs  session.rs
src/protocols/mqtt/v5/packet/: common.rs  connect.rs  mod.rs  pingreq.rs  publish.rs  subscribe.rs
src/server/: mod.rs  rt_glommio.rs  rt_tokio.rs
src/tests/: mod.rs  utils.rs
src/tests/mosquitto/: mod.rs  test_01_connect_575314.rs  test_01_connect_allow_anonymous.rs  test_01_connect_disconnect_v5.rs  test_01_connect_max_connections.rs  test_01_connect_max_keepalive.rs  test_01_connect_take_over.rs  test_01_connect_uname_no_password_denied.rs  test_01_connect_uname_or_anon.rs  test_01_connect_uname_password_denied.rs  test_01_connect_uname_password_denied_no_will.rs  test_01_connect_uname_password_success_no_tls.rs  test_01_connect_windows_line_endings.rs  test_01_connect_zero_length_id.rs  test_02_shared_qos0_v5.rs  test_02_subhier_crash.rs  test_02_subpub_qos0_long_topic.rs  test_02_subpub_qos0_oversize_payload.rs  test_02_subpub_qos0_queued_bytes.rs  test_02_subpub_qos0_retain_as_publish.rs  test_02_subpub_qos0_send_retain.rs  test_02_subpub_qos0_subscription_id.rs  test_02_subpub_qos0_topic_alias.rs  test_02_subpub_qos0_topic_alias_unknown.rs  test_02_subpub_qos1.rs  test_02_subpub_qos1_message_expiry.rs  test_02_subpub_qos1_message_expiry_retain.rs  test_02_subpub_qos1_message_expiry_will.rs  test_02_subpub_qos1_nolocal.rs  test_02_subpub_qos1_oversize_payload.rs  test_02_subpub_qos2.rs  test_02_subpub_qos2_1322.rs  test_02_subpub_qos2_max_inflight_bytes.rs  test_02_subpub_qos2_pubrec_error.rs  test_02_subpub_qos2_receive_maximum_1.rs  test_02_subpub_qos2_receive_maximum_2.rs  test_02_subpub_qos2_receive_maximum_helper.rs  test_02_subpub_recover_subscriptions.rs  test_02_subscribe_dollar_v5.rs  test_02_subscribe_invalid_utf8.rs  (+143 more)
src/tests/protocol/: connect.rs  pending.rs  publish.rs  retain.rs  session.rs  subscribe.rs  will.rs
src/tests/protocols/: mod.rs
src/tests/protocols/mqtt/: mod.rs
src/tests/protocols/mqtt/v3/: connect.rs  mod.rs  pending.rs  publish.rs  retain.rs  session.rs  subscribe.rs  will.rs
src/tests/protocols/mqtt/v5/: mod.rs
src/tests/protocols/mqtt/v5/base/: connect.rs  mod.rs  pending.rs  publish.rs  retain.rs  session.rs  subscribe.rs  will.rs
src/tests/protocols/mqtt/v5/v500/: auth.rs  connect.rs  mod.rs  publish.rs  shared_subscription.rs  subscribe.rs
