[workspace]
members = ["akasa-core", "akasa"]
resolver = "2"

[workspace.dependencies]
dashmap = "6"
log = "0.4"
mqtt-proto = "0.4"
rand = "0.10"
serde = "1"
serde_json = "1"
thiserror = "2"

# [profile.release]
# debug = true

# ==== Optimize for binary size ====
# opt-level = 's'
# lto = true
# codegen-units = 1
# strip = true
