[package]
name = "akasa-core"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
base64 = "0.22"
bytes = "1"
cfg-if = "1"
crc32c = "0.6"
dashmap = { workspace = true }
flume = { version = "0.12", features = ["async"] }
futures-io = "0.3"
futures-lite = "2"
futures-sink = "0.3"
futures-util = "0.3"
hashbrown = "0.17"
hex = { version = "0.4", features = ["serde"] }
log = { workspace = true }
mqtt-proto = { workspace = true, features = ["tokio"] }
num_cpus = "1"
openssl = { version = "0.10", features = ["vendored"] }
parking_lot = "0.12"
pin-project-lite = "0.2"
rand = { workspace = true, features = ["thread_rng"] }
ring = "0.17"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
tokio-openssl = "0.6"
uuid = { version = "1", features = ["v4"] }

axum = { version = "0.8", optional = true }
utoipa = { version = "5", optional = true }

[dev-dependencies]
async-trait = "0.1"
env_logger = "0.11"
futures-sink = "0.3"
http-body-util = "0.1"
tokio-util = "0.7"
tower = "0.5"

[features]
http = ["dep:axum", "dep:utoipa"]
