[package]
name = "akasa"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akasa-core = { path = "../akasa-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.11"
log = { workspace = true }
dashmap = { workspace = true }
rpassword = "7"
rand = { workspace = true, features = ["thread_rng"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
